# GraphicsHW4

./: catrom  generate_gif.sh  initial_points  subd  viewer.py
data/: catrom_100_points  subd_weight_-0.9_iterations_10  subd_weight_-1.25_iterations_1  subd_weight_-1.25_iterations_10  subd_weight_0_iterations_10  subd_weight_1_iterations_10  subd_weight_6_iterations_8
include/: CattmullRomCurve.hh  DataLoader.hh  SubdivisionCurve.hh
src/: CMakeLists.txt  CattmullRomCurve.cc  DataLoader.cc  SubdivisionCurve.cc  catrom.cc  subd.cc
